--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Jogo da Velha</h1>
     <section class="jdv">
         <div class="quads" data-cell></div>
         <div class="quads" data-cell></div>
@@ -21,7 +22,7 @@
         <div class="quads" data-cell></div>
     </section>
 
-    <div id="resultado"  data-winning-message> 
+    <div class="resultado" data-winning-message> 
         <p class="resultado" data-winning-message-text></p>
         <button id="btres">Reiniciar</button>
     </div>
